# rust-examples-2024

./: Cargo.toml  README.md
logs/: prefix.log.2024-03-20
src/: error.rs  graphical_term_ui.rs  main.rs  map.rs  renderer.rs
