[package]
name = "example1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.9.0"
thiserror = "1.0.58"
time = "0.3.34"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"
